Fixes rainbow spacing

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -598,7 +598,7 @@ span:nth-child(10) {
 }
 
 .rainbow_wrapper {
-    left: 30px;
+    left: 25px;
     position: absolute;
 }
 
